src/test/ui/type/type-check/cannot_infer_local_or_vec.stderr
error[E0282]: type annotations needed for `Vec<T>`
  --> $DIR/cannot_infer_local_or_vec.rs:2:13
   |
LL |     let x = vec![];
   |             ^^^^^^ cannot infer type for type parameter `T` declared on the struct `Vec`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider giving this binding the explicit type `Vec<T>`, where the type parameter `T` is specified
   |
LL |     let x: Vec<T> = vec![];
   |          ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
